service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-svc-22
  namespace: lab-cnb
  labels:
    app: shipping-service-22
spec:
  type: NodePort
  ports:
    - name: app-port
      targetPort: app-port
      port: 3000
  selector:
    app: shipping-service-22
