ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-service-ingress-22
  namespace: lab-cnb
  labels:
    app: shipping-service-22  
spec:
  rules:
  - host: shipping-service-22.cnb-iks.eu-gb.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: shipping-service-svc-22
          servicePort: app-port
